Fix another double checked lock problem, make doPrivileged() in Debug printouts optional, avoid direct calls to AccessControlerContex when checking permissions.